--- a/templates/admin.html
+++ b/templates/admin.html
@@ -36,11 +36,11 @@
         <div class="col-xl-4 mb-4">
           <div class="card-custom">
             <div class="card-title">Beds</div>
-            <form class="row g-2 mb-3" onsubmit="return false;">
+            <form class="row g-2 mb-3">
               <div class="col-5"><input id="bedName" class="form-control form-control-sm" placeholder="Bed name" /></div>
               <div class="col-3"><input id="bedRoom" class="form-control form-control-sm" placeholder="Room" /></div>
               <div class="col-4"><input id="bedPatient" class="form-control form-control-sm" placeholder="Patient (opt)" /></div>
-              <div class="col-12 text-end"><button id="addBedBtn" class="btn btn-sm btn-primary">Add Bed</button></div>
+              <div class="col-12 text-end"><button id="addBedBtn" type="button" class="btn btn-sm btn-primary">Add Bed</button></div>
             </form>
             <ul id="bedsList" class="list-group list-group-flush small"></ul>
           </div>
@@ -48,10 +48,10 @@
         <div class="col-xl-4 mb-4">
           <div class="card-custom">
             <div class="card-title">Staff Contacts</div>
-            <form class="row g-2 mb-3" onsubmit="return false;">
+            <form class="row g-2 mb-3">
               <div class="col-6"><input id="staffName" class="form-control form-control-sm" placeholder="Name" /></div>
               <div class="col-6"><input id="staffPhone" class="form-control form-control-sm" placeholder="+1..." /></div>
-              <div class="col-12 text-end"><button id="addStaffBtn" class="btn btn-sm btn-primary">Add Staff</button></div>
+              <div class="col-12 text-end"><button id="addStaffBtn" type="button" class="btn btn-sm btn-primary">Add Staff</button></div>
             </form>
             <ul id="staffList" class="list-group list-group-flush small"></ul>
           </div>
@@ -59,13 +59,13 @@
         <div class="col-xl-4 mb-4">
           <div class="card-custom">
             <div class="card-title">Shifts</div>
-            <form class="row g-2 mb-3" onsubmit="return false;">
+            <form class="row g-2 mb-3">
               <div class="col-6"><input id="shiftName" class="form-control form-control-sm" placeholder="Shift name" /></div>
               <div class="col-3"><input id="shiftStart" class="form-control form-control-sm" placeholder="Start HH:MM" /></div>
               <div class="col-3"><input id="shiftEnd" class="form-control form-control-sm" placeholder="End HH:MM" /></div>
               <div class="col-8"><input id="shiftDays" class="form-control form-control-sm" placeholder="Days e.g. 0,1,2" /></div>
               <div class="col-4"><input id="shiftStaffIds" class="form-control form-control-sm" placeholder="Staff IDs" /></div>
-              <div class="col-12 text-end"><button id="addShiftBtn" class="btn btn-sm btn-primary">Add Shift</button></div>
+              <div class="col-12 text-end"><button id="addShiftBtn" type="button" class="btn btn-sm btn-primary">Add Shift</button></div>
             </form>
             <ul id="shiftsList" class="list-group list-group-flush small"></ul>
           </div>
@@ -81,7 +81,7 @@
       </div>
       <div class="card-custom">
         <div class="card-title">Add User</div>
-        <form class="row g-2 mb-3" onsubmit="return false;">
+        <form class="row g-2 mb-3">
           <div class="col-xl-3 col-md-6"><input id="userEmail" class="form-control form-control-sm" placeholder="Email" /></div>
           <div class="col-xl-2 col-md-6"><input id="userName" class="form-control form-control-sm" placeholder="Name (opt)" /></div>
           <div class="col-xl-2 col-md-6"><input id="userPassword" type="password" class="form-control form-control-sm" placeholder="Password" /></div>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-xl-1 col-md-6"><input id="userFacilityId" class="form-control form-control-sm" placeholder="Facility" /></div>
           <div class="col-xl-2 col-md-6"><input id="userAssigned" class="form-control form-control-sm" placeholder="Assigned IDs (1,2)" /></div>
-          <div class="col-12 text-end"><button id="addUserBtn" class="btn btn-sm btn-primary">Add User</button></div>
+          <div class="col-12 text-end"><button id="addUserBtn" type="button" class="btn btn-sm btn-primary">Add User</button></div>
         </form>
         <ul id="usersList" class="list-group list-group-flush small"></ul>
       </div>
