--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,7 +12,10 @@
     <li class="sidebar-item"><a href="/admin" class="sidebar-link active"><i class="fas fa-tools"></i><span>Admin</span></a></li>
   </ul>
   <div class="p-3">
-    <a class="btn btn-outline-light btn-sm w-100" href="/logout"><i class="fas fa-sign-out-alt me-2"></i>Logout</a>
+    <a class="btn btn-outline-light btn-sm w-100 sidebar-action-btn" href="/logout" data-label="Logout">
+      <i class="fas fa-sign-out-alt me-2"></i>
+      <span class="sidebar-action-text">Logout</span>
+    </a>
   </div>
 </div>
 
